# bmi160

./: .eil.yml  .gitignore  CMakeLists.txt  README.md  bmi160.c  idf_component.yml
.github/workflows/: publish-esp-component.yml  validate-esp-component.yml
docs/: index.rst
examples/default/main/: CMakeLists.txt  idf_component.yml  main.c
examples/step_counter/main/: CMakeLists.txt  idf_component.yml  main.c
examples/tap_detection/main/: CMakeLists.txt  idf_component.yml  main.c
include/: bmi160.h  bmi160_reg.h
